--- a/DiceSimulatorApplication/RollingDiceApplication.ipynb
+++ b/DiceSimulatorApplication/RollingDiceApplication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,12 @@
     "diceImg = ['Img1.jpg','Img2.jpg','Img3.jpg','Img4.jpg','Img5.jpg','Img6.jpg']\n",
     "\n",
     "# simulating the dice with random numbers between 0 to 6 and generating image\n",
-    "getImages = ImageTk.PhotoImage(Image.open(random.choice(dice)))"
+    "getImages = ImageTk.PhotoImage(Image.open(random.choice(diceImg)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,21 +65,29 @@
     "\n",
     "label_img = tk.Label(window, image=getImages)\n",
     "label_img.image = getImages\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# packing image in the window (middle) \n",
     "label_img.pack(expand=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# function for the button to generate numbers\n",
     "\n",
     "def rolling_dice():\n",
-    "    getImages = ImageTk.PhotoImage(Image.open(random.choice(dice)))\n",
+    "    getImages = ImageTk.PhotoImage(Image.open(random.choice(diceImg)))\n",
     "    # update image\n",
     "    label_img.configure(image=getImages)\n",
     "    # keep a reference\n",
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,12 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "window.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
